--- a/index.template
+++ b/index.template
@@ -45,10 +45,10 @@
 							<div class="6u 12u$(medium) vert-center">
                   <div class="container 25%">
                     <div class="image fit captioned align-center">
-                      <a href="images/rodi.pdf">
+                      <a href="https://arxiv.org/pdf/1910.10223.pdf">
                         <img src="images/paper.jpg" alt="" style="border:1px solid black"/>
                       </a>
-                      <a href="https://arxiv.org/">arXiv</a>
+                      <a href="https://arxiv.org/abs/1910.10223">arXiv</a>
                       <div class="headerDivider"></div>
                       <a href="images/rodi.bib">BibTeX</a>
                       <div class="headerDivider"></div>
